Implement_Countermeasures/gatekeeper/constraints/pod-host-network-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodHostNetworkingPorts
metadata:
  name: pod-host-network-ports
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["test"]
  parameters:
    hostNetwork: false
    min: 8080
    max: 9090
    ops: ["CREATE","UPDATE"]
    errMsg: "INVALID_HOST_NETWORK"
